\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{emdbook News}
\encoding{UTF-8}

\section{Changes in version 1.3.8}{
   \itemize{
     \item CRAN compatibility tweaks; add link to goby data; update link
   to damselfish data
   }
}

\section{Changes in version 1.3.7}{
   \itemize{
     \item CRAN compatibility tweaks
   }
}
\section{Changes in version 1.3.5}{
  \itemize{
    \item CRAN compatibility tweaks
  }
}

\section{Changes in version 1.3.4}{
  \itemize{
    \item dbetabinom fix (reported by Christian Robert)
    \item more CRAN compatibility tweaks (versions 1.3.2 - 1.3.3)
    \item add 'lims' argument to HPDregionplot
    \item add plyr dependency, use_plyr option in curve3d
  }
}
\section{Changes in version 1.3.2.1}{
     \itemize{
       \item remove EISPACK=TRUE in dmvnorm
     }
}

\section{Changes in version 1.3.2}{
     \itemize{
       \item small fix for NAs in lambertW
       \item tweaks to avoid NOTES in CRAN check, cleanup
     }
}
\section{Changes in version 1.3.1}{
    \itemize{
      \item asymptotic extension to lambertW (remove possibility of
    vectorized branch specification)
      \item update NEWS to NEWS.Rd
  }}

\section{Changes in version 1.3}{
    \itemize{
      \item minor bugfixes for HPDregionplot 
      \item tweaks to pass checks on R 2.13
  }}

  \section{Changes in version 1.2.2.1 (24/05/2010)}{
    \itemize{
      \item add @data to calcslice
  }}
  
  \section{Changes in version 1.2.2 (17/03/2010)}{
    \itemize{
      \item add (trivial) NAMESPACE
      \item add contour3d
      \item add xlim/ylim arguments to curve3d
  }}
  
  \section{Changes in version 1.2.1 (11/02/2010)}{
    \itemize{
      \item remove adapt from install.packages()
      \item add warning about adapt
      \item move CITATION file
  }}

  \section{Changes in version 1.2 (17/08/2009)}{
    \itemize{
      \item change is.na() test in lambertW to is.finite()
      \item added ggplot2 to install.packages(), streamline