@@ -1,17 +1,17 @@
 Package: emdbook
 Type: Package
 Title: Support Functions and Data for "Ecological Models and Data"
-Version: 1.3.8
+Version: 1.3.9
 LazyData: yes
-Date: 2015-04-25
+Date: 2016-01-07
 Author: Ben Bolker
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
 Description: Auxiliary functions and data sets for "Ecological Models and Data", a book presenting maximum likelihood estimation and related topics for ecologists (ISBN 978-0-691-12522-0).
-Suggests: R2WinBUGS, ellipse, SuppDists, numDeriv, testthat
-Imports: MASS, lattice, plyr, rgl, coda, bbmle
+Suggests: R2WinBUGS, ellipse, SuppDists, numDeriv, testthat, rgl
+Imports: MASS, lattice, plyr, coda, bbmle
 License: GPL
 URL: http://www.math.mcmaster.ca/bolker/emdbook
 NeedsCompilation: no
-Packaged: 2015-04-28 18:16:25 UTC; bolker
+Packaged: 2016-02-11 14:35:16 UTC; bolker
 Repository: CRAN
-Date/Publication: 2015-05-01 09:59:22
+Date/Publication: 2016-02-11 16:43:09
