@@ -1,11 +1,10 @@
-2353d4bace4c1e12a87e378c1bedeb90 *DESCRIPTION
-ad7151bfc5fc5548420f8a60afcf1564 *NAMESPACE
-32a24a3b5f0a82939418922c8d53a645 *NEWS
+02fabe3259f6c7a8debf87e491237446 *DESCRIPTION
+663446585e6e669b50d06c716b94fa3a *NAMESPACE
 d92224835833fef130226183c1b53f4d *R/bayes.R
 fcd8bb37cd8557772e7169fec824af6c *R/dists.R
 318f8cc8bd453b8e6c0f44be19446ee6 *R/emdbook.R
 9b04fa5e38d4487adac32d337a640bac *R/lambertW.R
-1dfba17e6b236a8b1732f822bf84964e *R/utils3d.R
+9ea5cda9c2906970dc67503379409c17 *R/utils3d.R
 94296150eb8f47d89768e6ab41aa922f *data/DamselRecruitment.tab.gz
 1bbec908bfd6c1347f92365adf3b9df1 *data/DamselRecruitment_sum.tab.gz
 1fc635e815003c68d2435c7962ff3ab6 *data/DamselSettlement.tab.gz
@@ -34,7 +33,7 @@ c2186b209ab74f924a7f9f9853e49be3 *inst/BUGS/statespace.bug
 39930b1f16d993d66cf0a04f81259ca7 *inst/BUGS/testmyxo.bug
 1ec042fb51e028e2052fa524fad39ea0 *inst/BUGS/trees.bug
 69aa99f614c7d4cf08896de489792fee *inst/CITATION
-74e3da7b975cbe20d08fad8d68791085 *inst/NEWS.Rd
+e78705597b0a33d1a5dcc2804056debe *inst/NEWS.Rd
 697732b3d8c8dcd7e1b6d27d57895794 *inst/misc/firfec-batch.R
 50e7f0aefdb59907e77b490d460a55e7 *man/Damsel.Rd
 b38e342000a8dcb43f7f09355dde2e7e *man/Fir.Rd
@@ -47,9 +46,9 @@ fae48299e619e2f5bbc46c9e89bb24c6 *man/Reedfrog.Rd
 95e98e9772072dcdd7ac8d17decc803d *man/apply2d.Rd
 0d0f8e2cf3e2a67305600d54759905fa *man/as.mcmc.bugs.Rd
 2e08e6f5336a24248df8988858a77fcc *man/calcslice.Rd
-c010f328dc3538f4cb617e7b4e89affc *man/contour3d.Rd
+8a90144d48fec18acebb26307594ea7d *man/contour3d.Rd
 ef36cb4bb75fff60aae06dc73e6893de *man/credint.Rd
-f1a38705656cde1c83bb25cf96e98400 *man/curve3d.Rd
+1b1098c48e8f7c4a2f600ed4756220ac *man/curve3d.Rd
 68bd32cf52b118eedd4207259c9afff6 *man/dbetabinom.Rd
 087c8245d6108e4a23756a24240611e6 *man/dchibarsq.Rd
 fdbd20aa484f4aa1ea1e60bbf66886a9 *man/deltamethod.Rd
