@@ -1,88 +1,0 @@
-1.2.2.2: change default bandwidth within HPDregion
-         minor cleanup to pass R CMD check
-
-1.2.2.1: add @data to calcslice
-        24/05/2010 (tweak/bugfix)
-
-1.2.2: 17/03/2010 add (trivial) NAMESPACE
-     add contour3d
-     add xlim/ylim arguments to curve3d
-
-1.2.1: 11/02/2010 remove adapt from install.packages(),
-   add warning about adapt, move CITATION file
-
-1.2: 17/08/2009
-   change is.na() test in lambertW to is.finite()
-   added ggplot2 to install.packages(), streamline
-   REMOVED "traceplot" code: nearly identical to xyplot.mcmc
-     etc. in coda package
-
-1.1.1.1: 16/10/2008
-      add firfec0.bug to BUGS
-      reverse date order of NEWS
-
-1.1.1  tweak to curve3d from Robert Burns
-       moved ChangeLog to NEWS
-       added axis.scinot
-
-1.1.0: argh, another tweak to get.emdbook.packages
-         tweaked deltavar to be slightly more general
-
-1.0.9:  changed "Wrasse" to "Damsel[fish]" throughout (oops)
-        tweaked get.emdbook.packages (do.call rather than sapply)
-	tweaked LambertW NA behavior (still not optimal)
-
-1.0.8.1: ANOTHER big bug in dmvnorm (sigh):
-	spurious factor of n before log determinant
-	  (should consider removing dmvnorm and
-	    just referring users to mvtnorm::dmvnorm)
-	added cross-ref to mvtnorm::dmvnorm in dmvnorm.Rd
-
-1.0.8: fixed major bugs in dmvnorm
-       added bbmle to get.emdbook.packages
-       added an extended version of trcoef (transform coefficients)
-       added (preliminary) perturb.params
-       tweaked some keywords/aliases
-       added traditional parameterization for dbetabinom
-       added note about SuppDists to ?dbetabinom
-       removed coda dependency
-
-       put myxo1.bug into BUGS directory
-
-1.0.7: tweaked dbetabinom documentation
-       fixed (major) bug in get.emdbook.packages
-       added aliases to data .Rd files
-       added reference to gsl package in lambertW Rd file
-       added gridsearch2d
-       added metropSB (Metropolis-Szymura-Barton)
-	
-
-1.0.6: internal tweaks
-       tiny doc fix for Myxo (sum instead of bsum)
-
-1.0.5: removed qcredint (HPDinterval[coda] is better)
-       added calcslice, HPDregionplot, *chibarsq functions
-       fixed deltavar
-       tweaks to scinot() 
-       added lump.mcmc.list()
-       changed dataset names,
-         moved lily and goby data sets to emdbookx
-       added require(coda) to as.mcmc.bugs
-       added {d,r}betabinom
-       added SeedPred_mass data (numeric vector of seed masses)
-       added numeric derivatives to deltavar
-       fixed bug in calcslice (not referring to correct function)
-       added Lily data (moved from emdbookx)
-
-1.0.4: added r/dzinbinom (zero-inflated negative binomial) functions
-       lseq
-       scinot
-       added myxomatosis data
-       added "none" option to curve3d
-       added credible interval functions, as.mcmc.bugs
-
-
-1.0.3: added more data (fir and fish survivorship), delta-method
-       functions, get-packages function
-
-1.0.1: added Vonesh data, lambertW function (from bbmisc)
